--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Notepad application using express and react. Part of focus21.io job application",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "webpack": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
+    "babel-loader": "^7.1.2",
     "lodash": "^4.17.4"
   }
 }
